added about, services, and contact html pages.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Flexbox Grid App Theme Layout</title>
+  <title>My Golf Pro</title>
   <link rel="stylesheet" href="css/flexboxgrid.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/font-awesome.css">
@@ -21,10 +21,11 @@
           <h1>My<span class="primary-text"> Golf Pro</span></h1>
         </div>
         <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
+      <!--  Navigation -->
           <nav>
             <nav id="navbar">
               <ul>
-                <li><a href="index.html">Home</a></li>
+                <li class="current"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -129,7 +130,7 @@
         </div>
       </div>
     </div> <!-- end container -->
-  </section> <!-- end features section -->
+  </section> <!-- end Info section -->
 
   <!-- COMPANY INFO  -->
   <section id="company">
