--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,12 @@
   <header id="main-header">
     <div class="container">
       <!-- "end" aligns the content to the end of the row based on screen size. It only changes for xs screens. -->
-      <div class="row end-sm emd-md end-lg">
+      <div class="row end-sm emd-md end-lg  middle-xs middle-sm middle-md middle-lg">
         <!-- specifies the col size for xs, sm, md, and lg screens -->
-        <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2"> 
-          <h1>My<span class="primary-text"> Golf Pro</span></h1>
+        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> 
+          <h1><span class="primary-text">My Golf Pro</span></h1>
         </div>
-        <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
+        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
       <!--  Navigation -->
           <nav>
             <nav id="navbar">
