added css for rest of template

--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
   <header id="main-header">
     <div class="container">
       <!-- "end" aligns the content to the end of the row based on screen size. It only changes for xs screens. -->
-      <div class="row end-sm emd-md end-lg middle-xs middle-sm middle-md middle-lg">
+      <div class="row end-sm emd-md end-lg center-xs middle-xs middle-sm middle-md middle-lg">
         <!-- specifies the col size for xs, sm, md, and lg screens -->
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> 
           <h1><span class="primary-text">My Golf Pro</span></h1>
@@ -59,17 +59,17 @@
             <ul>
               <li>
                 <h3>My Golf Pro International</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptatibus explicabo similique beatae, error tempora vel necessitatibus quam rem minus!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquid nulla similique doloribus tempore. Maxime iure illum libero tempora veniam minima, explicabo molestiae, repudiandae dicta, necessitatibus blanditiis. Provident, sed error? Fugiat, ipsa odit accusantium doloremque vitae nobis reiciendis sapiente pariatur!</p>
               </li>
 
               <li>
                 <h3>Analyze This</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptatibus explicabo similique beatae, error tempora vel necessitatibus quam rem minus!</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto hic rerum eaque molestiae necessitatibus. Ex harum eos, id doloremque accusantium, quisquam culpa debitis sint animi saepe deleniti quia exercitationem! Vitae voluptas voluptatibus corrupti maiores reprehenderit error accusamus debitis, possimus tenetur.</p>
               </li>
 
               <li>
                 <h3>PGA 24/7</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptatibus explicabo similique beatae, error tempora vel necessitatibus quam rem minus!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, nam, suscipit earum autem voluptate placeat natus et, nulla unde soluta quibusdam numquam nemo magnam quos rem consequuntur velit commodi esse quas omnis iusto? Beatae, nam. Perspiciatis nobis pariatur similique aliquam?</p>
               </li>
             </ul>
         </div>  
@@ -99,7 +99,7 @@
           <h4> Fore! Newsletter</h4>
           <p>Sign up for the Fore! monthly newsletter!</p>
           <form> 
-            <input type="email" placeholder="email">
+            <input type="text" placeholder="email">
             <button type="submit" name="button">Submit</button>
           </form>
         </div>
@@ -110,7 +110,7 @@
   <!-- FOOTER -->
   <footer id="main-footer">
     <div class="container">
-      <div class="row">
+      <div class="row center-xs center-sm center-md center-lg">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <p>Copyright &copy; 2017 | My Golf Pro by Fore!</p>
         </div>
