--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <header id="main-header">
     <div class="container">
       <!-- "end" aligns the content to the end of the row based on screen size. It only changes for xs screens. -->
-      <div class="row end-sm emd-md end-lg middle-xs middle-sm middle-md middle-lg">
+      <div class="row end-sm emd-md end-lg center-xs middle-xs middle-sm middle-md middle-lg">
         <!-- specifies the col size for xs, sm, md, and lg screens -->
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> 
           <h1><span class="primary-text">My Golf Pro</span></h1>
@@ -89,7 +89,7 @@
           <h4> Fore! Newsletter</h4>
           <p>Sign up for the Fore! monthly newsletter!</p>
           <form> 
-            <input type="email" placeholder="email">
+            <input type="text" placeholder="email">
             <button type="submit" name="button">Submit</button>
           </form>
         </div>
@@ -100,7 +100,7 @@
   <!-- FOOTER -->
   <footer id="main-footer">
     <div class="container">
-      <div class="row">
+      <div class="row center-xs center-sm center-md center-lg">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <p>Copyright &copy; 2017 | My Golf Pro by Fore!</p>
         </div>
