--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <header id="main-header">
     <div class="container">
       <!-- "end" aligns the content to the end of the row based on screen size. It only changes for xs screens. -->
-      <div class="row end-sm emd-md end-lg 
-      middle-xs middle-sm middle-md middle-lg">
+      <div class="row end-sm emd-md end-lg center-xs middle-xs middle-sm middle-md middle-xs">
         <!-- specifies the col size for xs, sm, md, and lg screens -->
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> 
           <h1><span class="primary-text">My Golf Pro</span></h1>
@@ -45,9 +44,9 @@
       <div class="row center-xs center-sm center-md center-lg
       middle-xs middle-sm middle-md middle-lg">
       <!-- This will be one big column and will span the width of the div -->
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="showcase-content col-xs-12 col-sm-10 col-md-10 col-lg-7">
           <h1>Welcome to <span class="primary-text">My Golf Pro</span></h1>
-          <p>A mobile-friendly app that track golf scores,  harrowing holes, and all the courses you play!</p>
+          <p>A mobile-friendly app that tracks golf scores, harrowing holes, and all the courses you play!</p>
         </div>
       </div> <!-- end row -->
     </div> <!-- end container -->
@@ -141,8 +140,8 @@
           <h4>Contact</h4>
           <ul>
             <li><i class="fa fa-phone"> (651) 333-1357</i></li>
-            <li><i class="fa fa-envelope"> mygolfpro@fore.com</i></li>
-            <li><i class="fa fa-map-marker"> 405 South 5th Street Minneapolis, Mn 54321</i></li>
+            <li><i class="fa fa-envelope">     mygolfpro@fore.com</i></li>
+            <li><i class="fa fa-map-marker"> 405 South 5th Street Minneapolis, MN 54321</i></li>
           </ul>
         </div>
 
@@ -155,7 +154,7 @@
           <h4> Fore! Newsletter</h4>
           <p>Sign up for the Fore! monthly newsletter!</p>
           <form> 
-            <input type="email" placeholder="email">
+            <input type="text" placeholder="email">
             <button type="submit" name="button">Submit</button>
           </form>
         </div>
@@ -166,7 +165,7 @@
   <!-- FOOTER -->
   <footer id="main-footer">
     <div class="container">
-      <div class="row">
+      <div class="row center-xs center-sm center-md center-lg">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <p>Copyright &copy; 2017 | My Golf Pro by Fore!</p>
         </div>
